# signalforge

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  session_summary_2026-03-27.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
data/: grace_greenland.csv  grace_regions.csv
docs/: architecture.md  binjamin.md  cli.md  comparison.md  concepts.md  data_guide.md  design_grain_snapping.md  discovery_eeg_seizure_detection.md  distill_quickstart.md  domain_guide.md  empirical_results.md  examples.md  operators_guide.md  overview.md  python-api.md  quickstart.md  sampling_domain.md  scale_space.md  structural_invariance.md  your-data.md
docs/_sphinx/: conf.py  index.md
docs/archive/: data-guide.md  design_grain_snapping.md  domain_guide.md  sampling_domain.md  scale_space.md
examples/: edf_to_rms_csv.py  iaga2002_to_csv.py  run_eeg.py  run_equities.py  run_intermagnet.py  run_timeseries.py  yfinance_to_csv.py
signalforge/: __init__.py  __main__.py  analysis.py  chain.py  cli.py  distill.py  report.py
signalforge/domains/: __init__.py  eeg.py  equities.py  intermagnet.py  timeseries.py
signalforge/graph/: __init__.py  _core.py  _multi_ops.py  _ops.py  _resolve.py  _types.py
signalforge/lattice/: __init__.py  coordinates.py  flipflop.py  neighborhood.py  sampling.py
signalforge/pipeline/: __init__.py  aggregation.py  binned.py  bundle.py  canonical.py  dag.py  feature.py  operators.py  (+1 more)
tests/: test_information.py  test_lattice.py  test_pipeline.py  test_schema.py  test_signal.py
(+43 files in other folders)
