[project]
name = "adelic-signalforge"
version = "0.2.0"
description = "Multiscale signal analysis on a normalized scale space"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BUSL-1.1"}
authors = [
    {name = "Shun Richard Honda", email = "shun.honda@adelic.org"},
]
keywords = ["signal processing", "p-adic", "multiscale", "EEG", "time series", "anomaly detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "binjamin",
    "mne>=1.11.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/adelic/signalforge"
Documentation = "https://github.com/adelic/signalforge/tree/main/docs"
"Bug Tracker" = "https://github.com/adelic/signalforge/issues"

[project.scripts]
signalforge = "signalforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["signalforge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "twine>=6.2.0",
]
